force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/vlocity_cmt__AsyncProcessStep__c.object-meta.xml
<CustomObject>
    <description>Async Engine Step details</description>
    <label>Async Process Step</label>
    <nameField>
        <label>Async Process Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Process Steps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>