force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/fields/vlocity_cmt__NumberOfItemsProcessed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberOfItemsProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of items already processed.</description>
    <label>Number Of Items Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>