force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/fields/vlocity_cmt__StartProcessAdditionalData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StartProcessAdditionalData__c</fullName>
    <description>Additional data that was input to the Start Process.</description>
    <label>Start Process Additonal Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>