force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/fields/vlocity_cmt__StartProcessItemsToProcessList__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StartProcessItemsToProcessList__c</fullName>
    <description>List of the items to be processed given to the Start Process.</description>
    <label>Start Process Items to Process List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>