force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/fields/vlocity_cmt__StepNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StepNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Index of this Step in the Steps array.</description>
    <label>Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>