force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/fields/vlocity_cmt__TechnicalMessage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TechnicalMessage__c</fullName>
    <description>Technical details about the Async Engine execution.</description>
    <label>Technical Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>