force-app/main/default/objects/vlocity_cmt__AsyncProcessStep__c/fields/vlocity_cmt__TotalNumberOfItemsToBeProcessed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TotalNumberOfItemsToBeProcessed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of items that need to be processed.</description>
    <label>Total Number Of Items To Be Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>